--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Nunito Sans';
+}
+
 main {
   margin: 0 auto;
   max-width: 960px;
@@ -21,15 +25,44 @@ section {
   border-bottom: 1px solid black;
 }
 
+select {
+  width: 100px;
+}
+
 .token-card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 300px;
-  margin: 1rem auto;
+  margin: 1rem;
   padding: 1rem;
   border-radius: 0.5rem;
   background-color: #fff;
-  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.3);
+}
+
+.card-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  flex-wrap: wrap;
+}
+
+.token-card > h2 {
+  margin: 0.5rem;
+}
+
+.token-card > .data-row {
+  display: flex;
+  width: 100%;
+  padding: 0.2rem 0;
+  border-bottom: 1px solid #0000000f;
+}
+
+.token-card > .data-row > label {
+  flex: 1;
+  text-align: left;
+  font-weight: bold;
 }
