--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,14 +54,14 @@ select {
   margin: 0.5rem;
 }
 
-.token-card > .data-row {
+.data-row {
   display: flex;
   width: 100%;
   padding: 0.2rem 0;
   border-bottom: 1px solid #0000000f;
 }
 
-.token-card > .data-row > label {
+.data-row > label {
   flex: 1;
   text-align: left;
   font-weight: bold;
